flatpak: Do not crash if for any reason we lack a ref's source

BUG: 467827